@@ -1,3 +1,9 @@
+2009-06-18  Tsuyoshi CHO  <Tsuyoshi.CHO+develop@Gmail.com>
+
+	* twittering-mode.el (twittering-mode-map)
+	(twittering-format-status, twittering-retweet): Add new feature
+	ReTweet
+
 2009-06-18  Alberto Garcia  <agarcia@igalia.com>
 
 	* twittering-mode.el
@@ -8,7 +14,7 @@
 	(twittering-update-status-if-not-blank):
 	Code refactoring. No need to use (format) to convert a string.
 
-2009-06-18  Tsuyoshi CHO  <tsuyoshi_cho@yahoo.co.jp>
+2009-06-18  Tsuyoshi CHO  <Tsuyoshi.CHO+develop@Gmail.com>
 
 	* twittering-mode.el (twittering-status-format)
 	(twittering-format-status, twittering-status-to-status-datum)
